--- a/style.css
+++ b/style.css
@@ -6,17 +6,23 @@ header{
     margin-top: 87px;
     margin-left: 120px;
     margin-bottom: 80px;
-    border: 2px solid red;
-}
+    }
 nav{
-    /* display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 60%;
     align-items: center;
+}
+.site-name{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 36px;
+    color: #3A3A3A;
+    width: 300px;
+    height: 50px;
 }
 main{
     display: flex;
@@ -33,14 +39,17 @@ h1{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 133px;
-    border: 2px solid red;
 }
-.first-text{
+.first-text, .bonus-text{
     width: 582px;
     height: 270px;
-    border: 2px solid red;
-    margin-top: 60px;
-    
+    margin-top: 60px;   
+}
+.intro-text{
+    padding-bottom: 16px;
+}
+.intro-text:hover{
+   transform: scale(1.5);
 }
 .link-opener{
     text-decoration: none;
@@ -51,8 +60,13 @@ h1{
     font-weight: bold;
     font-size: 16px;
 }
+.fa-arrow-right:hover{
+    transform: rotate(-45deg) scale(2);
+}
+.fa-arrow-right{
+    margin-left: 8px;
+}
 .first-image img{
-    border: 2px solid red;
     width: 440px;
     height: 414px;
 }
@@ -67,7 +81,6 @@ h1{
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 30px;
     margin-top: 30px;
-    /* border: 2px solid red; */
 }
 .each-product{
     width: 329px;
@@ -83,11 +96,7 @@ h1{
     padding-left: 15px;
     padding-right: 15px;
 }
-/* .product-rating{
-    border: 2px solid red;
-} */
 .product-info{
-    /* border: 2px solid green; */
     font-weight: bold;
     font-size: 14px;
     letter-spacing: 0.018em;
@@ -96,10 +105,9 @@ h1{
 .popular-collection{
     width: 1047px;
     height: 1662px;
-}
+    }
 .product-details{
     display: grid;
-    /* border: 2px solid black; */
     padding-left: 15px;
     width: 310px;
     height: 200px;
@@ -108,8 +116,13 @@ h1{
     font-weight: 500;
     font-size: 28px;
     color: hsl(231, 13%, 11%);
-    /* border: 2px solid coral; */
     margin: 0;
+}
+.see-more{
+    display: flex;
+    justify-content: flex-end;
+    color: #E02C6D;
+     margin-top: 50px;
 }
 .fa-star{
     width: 16px;
@@ -120,7 +133,6 @@ h1{
     color: #FB8200;
 }
 .product-price{
-    /* border: 2px solid aqua; */
     font-weight: normal;
     font-size: 24px;
     color: rgba(0, 0, 0, 0.87);
@@ -129,4 +141,145 @@ h1{
     font-size: 14px;
     color: #5E6366;
     margin-left: 8px;
+}
+.top-influencer{
+    width: 1110px;
+    height: 270px;
+}
+.influencers{
+    margin-top: 80px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, .7);
+    border-radius: 10px;
+    padding: 10px 30px;
+}
+.influencer{
+    display: flex;
+    align-items: center;
+}
+.influencer img{
+    width: 56px;
+    height: 56px;
+}
+.influencer-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+.see-more-bottom{
+    display: flex;
+    justify-content: flex-end;
+    color: #E02C6D;
+    margin-top: 10px;
+}
+footer {
+    padding: 20px;
+    text-align: center;
+    background-color: black; 
+}
+footer p{
+    text-align: center;
+    color: white;
+    padding-bottom: 10px;  
+     font-size: 24px; 
+}
+#footer-smalltext{
+    color: white;
+    font-size: 14px;
+}
+.social-media{
+    margin-top: 20px;
+    color: white;
+}
+/* media queries */
+
+/* Mobile */
+
+@media only screen and (max-width: 688px) {
+    body{
+        width: 360px;
+        height: 6077px;
+    }
+    .site-name{
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 24px;
+        color: #3A3A3A;
+        width: 262px;
+        height: 24px;
+        margin-left: -50px;
+    }
+    .popular-collection, .first-part, .top-influencer, .bonus-part{
+        width: 100%;
+    }
+    .first-part{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .first-image img{
+        width: 257px;
+        height: 257px;
+        margin-left: 70px;
+        margin-top: 25px;
+    }
+    .first-text{
+        width: 404px;
+        height: 222px;
+    }
+    .first-text h1{
+        font-size: 28px;
+        line-height: 42px;
+    }
+    .first-text{
+        width: 404px;
+        height: 222px;
+        text-align: center;
+    }
+    .intro-text{
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 21px;
+        width: 321px;
+        height: 65px;
+        margin-left: 40px;
+        margin-right: 20px;
+    }
+    .bonus-part{
+        display: grid;
+        grid-template-columns: repeat(1. 1fr);
+        margin-top: 3100px;
+    }
+    .products, .section-title, .influencers{
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 50px;
+    }
+    .influencers{
+        padding: 10px 20px;
+        border-radius: 10px;
+    }
+    footer{
+        margin-top: 300px;
+    }
+}
+/* tablet */
+@media only screen and (min-width: 688px) and (max-width: 992px){
+    
+    .popular-collection, .first-part, .top-influencer, footer{
+        width: 100%;
+    }
+    .first-part, .top-influencer{
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .products, .influencers, .section-title{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .bonus-part{
+        display: grid;
+        grid-template-columns: repeat(1. 1fr);
+        margin-top: 1100px;
+    }
+    footer{
+        margin-top: 200px;
+    }
 }
